doc/docker/k8s/sky-walking/overlays/prod/skywalking-oap-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skywalking-oap
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: skywalking-oap
          resources:
            requests:
              memory: "2Gi"
              cpu: "1"
            limits:
              memory: "4Gi"
              cpu: "2"
