doc/docker/k8s/sky-walking/overlays/prod/skywalking-ui-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skywalking-ui
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: skywalking-ui
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1"
